# hypersaw

./: .cursorignore  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
data/: 4bars.mid
src/: main.rs
src/core/: automation.rs  command_manager.rs  commands.rs  keymap.rs  midi.rs  midi_editing.rs  midi_scheduler.rs  mod.rs  plugins.rs  project.rs  state.rs  status.rs  transport.rs  utils.rs
src/ui/: app.rs  channel_strip.rs  mod.rs  piano_roll.rs  plugin_browser.rs  timeline.rs
