[package]
name = "supersaw"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = "0.10.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
# portaudio = "0.8.0"
rfd = "0.15.1"
midly = "0.5.3"
ordered-float = { version = "4.6.0", features = ["serde"] }
