[package]
name = "supersaw"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = "0.10.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
rfd = "0.15.1"
midly = "0.5.3"
ordered-float = { version = "5.0.0", features = ["serde"] }
spin_sleep = "1.3.1"
